crates/djls-semantic/tests/snapshots/structure_tree__nodelist.snap
---
source: crates/djls-semantic/tests/structure_tree.rs
expression: nodelist_view(nodelist.nodelist(&db))
---
nodes:
  - kind: Text
    span:
      start: 0
      length: 1
  - kind: Tag
    name: extends
    name_span:
      start: 4
      length: 7
    bits:
      - text: "\"base.html\""
        span:
          start: 12
          length: 11
    span:
      start: 3
      length: 21
  - kind: Text
    span:
      start: 26
      length: 1
  - kind: Tag
    name: load
    name_span:
      start: 30
      length: 4
    bits:
      - text: static
        span:
          start: 35
          length: 6
      - text: i18n
        span:
          start: 42
          length: 4
    span:
      start: 29
      length: 18
  - kind: Text
    span:
      start: 49
      length: 1
  - kind: Tag
    name: block
    name_span:
      start: 53
      length: 5
    bits:
      - text: header
        span:
          start: 59
          length: 6
    span:
      start: 52
      length: 14
  - kind: Text
    span:
      start: 68
      length: 20
  - kind: Tag
    name: endblock
    name_span:
      start: 91
      length: 8
    bits:
      - text: header
        span:
          start: 100
          length: 6
    span:
      start: 90
      length: 17
  - kind: Text
    span:
      start: 109
      length: 2
  - kind: Tag
    name: if
    name_span:
      start: 114
      length: 2
    bits:
      - text: user.is_authenticated
        span:
          start: 117
          length: 21
    span:
      start: 113
      length: 26
  - kind: Text
    span:
      start: 141
      length: 16
  - kind: Variable
    var: user.name
    var_span:
      start: 160
      length: 9
    filters: []
    span:
      start: 159
      length: 11
  - kind: Text
    span:
      start: 172
      length: 9
  - kind: Tag
    name: if
    name_span:
      start: 184
      length: 2
    bits:
      - text: user.is_superuser
        span:
          start: 187
          length: 17
    span:
      start: 183
      length: 22
  - kind: Text
    span:
      start: 207
      length: 32
  - kind: Tag
    name: elif
    name_span:
      start: 242
      length: 4
    bits:
      - text: user.is_staff
        span:
          start: 247
          length: 13
    span:
      start: 241
      length: 20
  - kind: Text
    span:
      start: 263
      length: 34
  - kind: Tag
    name: else
    name_span:
      start: 300
      length: 4
    bits: []
    span:
      start: 299
      length: 6
  - kind: Text
    span:
      start: 307
      length: 39
  - kind: Tag
    name: endif
    name_span:
      start: 349
      length: 5
    bits: []
    span:
      start: 348
      length: 7
  - kind: Text
    span:
      start: 357
      length: 1
  - kind: Tag
    name: else
    name_span:
      start: 361
      length: 4
    bits: []
    span:
      start: 360
      length: 6
  - kind: Text
    span:
      start: 368
      length: 26
  - kind: Tag
    name: endif
    name_span:
      start: 397
      length: 5
    bits: []
    span:
      start: 396
      length: 7
  - kind: Text
    span:
      start: 405
      length: 2
  - kind: Tag
    name: for
    name_span:
      start: 410
      length: 3
    bits:
      - text: item
        span:
          start: 414
          length: 4
      - text: in
        span:
          start: 419
          length: 2
      - text: items
        span:
          start: 422
          length: 5
    span:
      start: 409
      length: 19
  - kind: Text
    span:
      start: 430
      length: 9
  - kind: Variable
    var: item
    var_span:
      start: 442
      length: 4
    filters: []
    span:
      start: 441
      length: 6
  - kind: Text
    span:
      start: 449
      length: 6
  - kind: Tag
    name: endfor
    name_span:
      start: 458
      length: 6
    bits: []
    span:
      start: 457
      length: 8
  - kind: Text
    span:
      start: 467
      length: 1
