crates/djls-semantic/tests/snapshots/structure_tree__template_tree.snap
---
source: crates/djls-semantic/tests/structure_tree.rs
expression: "TemplateTreeSnapshot::from_tree(template_tree, &db)"
---
root: 0
regions:
  - span:
      start: 0
      length: 468
    parent: ~
    nodes:
      - node: Text
        span:
          start: 0
          length: 1
      - node: StandaloneTag
        tag: extends
        name_span:
          start: 4
          length: 7
        bits:
          - text: "\"base.html\""
            span:
              start: 12
              length: 11
        full_span:
          start: 1
          length: 25
      - node: Text
        span:
          start: 26
          length: 1
      - node: StandaloneTag
        tag: load
        name_span:
          start: 30
          length: 4
        bits:
          - text: static
            span:
              start: 35
              length: 6
          - text: i18n
            span:
              start: 42
              length: 4
        full_span:
          start: 27
          length: 22
      - node: Text
        span:
          start: 49
          length: 1
      - node: BlockTag
        tag: block
        name_span:
          start: 53
          length: 5
        bits:
          - text: header
            span:
              start: 59
              length: 6
        full_span:
          start: 50
          length: 18
        body: 1
        role: Opener
      - node: Text
        span:
          start: 109
          length: 2
      - node: BlockTag
        tag: if
        name_span:
          start: 114
          length: 2
        bits:
          - text: user.is_authenticated
            span:
              start: 117
              length: 21
        full_span:
          start: 111
          length: 30
        body: 3
        role: Opener
      - node: Text
        span:
          start: 405
          length: 2
      - node: BlockTag
        tag: for
        name_span:
          start: 410
          length: 3
        bits:
          - text: item
            span:
              start: 414
              length: 4
          - text: in
            span:
              start: 419
              length: 2
          - text: items
            span:
              start: 422
              length: 5
        full_span:
          start: 407
          length: 23
        body: 10
        role: Opener
      - node: Text
        span:
          start: 467
          length: 1
  - span:
      start: 50
      length: 59
    parent: 0
    nodes:
      - node: BlockTag
        tag: block
        name_span:
          start: 53
          length: 5
        bits:
          - text: header
            span:
              start: 59
              length: 6
        full_span:
          start: 50
          length: 18
        body: 2
        role: Segment
  - span:
      start: 68
      length: 20
    parent: 1
    nodes:
      - node: Text
        span:
          start: 68
          length: 20
  - span:
      start: 111
      length: 294
    parent: 0
    nodes:
      - node: BlockTag
        tag: if
        name_span:
          start: 114
          length: 2
        bits:
          - text: user.is_authenticated
            span:
              start: 117
              length: 21
        full_span:
          start: 111
          length: 30
        body: 4
        role: Segment
      - node: BlockTag
        tag: else
        name_span:
          start: 361
          length: 4
        bits: []
        full_span:
          start: 358
          length: 10
        body: 9
        role: Segment
  - span:
      start: 141
      length: 217
    parent: 3
    nodes:
      - node: Text
        span:
          start: 141
          length: 16
      - node: Variable
        var: user.name
        var_span:
          start: 160
          length: 9
        filters: []
        span:
          start: 159
          length: 11
      - node: Text
        span:
          start: 172
          length: 9
      - node: BlockTag
        tag: if
        name_span:
          start: 184
          length: 2
        bits:
          - text: user.is_superuser
            span:
              start: 187
              length: 17
        full_span:
          start: 181
          length: 26
        body: 5
        role: Opener
      - node: Text
        span:
          start: 357
          length: 1
  - span:
      start: 181
      length: 176
    parent: 4
    nodes:
      - node: BlockTag
        tag: if
        name_span:
          start: 184
          length: 2
        bits:
          - text: user.is_superuser
            span:
              start: 187
              length: 17
        full_span:
          start: 181
          length: 26
        body: 6
        role: Segment
      - node: BlockTag
        tag: elif
        name_span:
          start: 242
          length: 4
        bits:
          - text: user.is_staff
            span:
              start: 247
              length: 13
        full_span:
          start: 239
          length: 24
        body: 7
        role: Segment
      - node: BlockTag
        tag: else
        name_span:
          start: 300
          length: 4
        bits: []
        full_span:
          start: 297
          length: 10
        body: 8
        role: Segment
  - span:
      start: 207
      length: 32
    parent: 5
    nodes:
      - node: Text
        span:
          start: 207
          length: 32
  - span:
      start: 263
      length: 34
    parent: 5
    nodes:
      - node: Text
        span:
          start: 263
          length: 34
  - span:
      start: 307
      length: 39
    parent: 5
    nodes:
      - node: Text
        span:
          start: 307
          length: 39
  - span:
      start: 368
      length: 26
    parent: 3
    nodes:
      - node: Text
        span:
          start: 368
          length: 26
  - span:
      start: 407
      length: 60
    parent: 0
    nodes:
      - node: BlockTag
        tag: for
        name_span:
          start: 410
          length: 3
        bits:
          - text: item
            span:
              start: 414
              length: 4
          - text: in
            span:
              start: 419
              length: 2
          - text: items
            span:
              start: 422
              length: 5
        full_span:
          start: 407
          length: 23
        body: 11
        role: Segment
  - span:
      start: 430
      length: 25
    parent: 10
    nodes:
      - node: Text
        span:
          start: 430
          length: 9
      - node: Variable
        var: item
        var_span:
          start: 442
          length: 4
        filters: []
        span:
          start: 441
          length: 6
      - node: Text
        span:
          start: 449
          length: 6
